# CTSim

./: AUTHORS  COPYING  COPYRIGHT  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.msvc  config.h.in  configure  configure.ac  index.html
benchmarks/: composite-test  results
cgi-bin/: Makefile  Makefile.am  Makefile.in  ctsim.cgi  ctsim.cgi.in  ctsim.conf  ctsim.conf.in
doc/: Makefile  alphacalc.ai  alphacalc.eps  ctsim-algorithms.tex  ctsim-concepts.tex  ctsim-gui.tex  ctsim-install.tex  ctsim-latex.bib  ctsim-sgp.tex  ctsim-tex2rtf.bib  ctsim-textui.tex  ctsim-web.tex  ctsim.hlp  ctsim.hpj  ctsim.prj  ctsim.tex  ctsimfig1.eps  ctsimfig1.fig  ctsimfig2.fig  ctsimfig3.eps  ctsimfig3.fig  ctsimfig4.eps  ctsimfig4.fig  ctsimfig5.eps  ctsimfig5.fig  divergent.ai  divergent.eps  equiangular.ai  equiangular.eps  equilinear.ai  equilinear.eps  logo.eps  make-help  maphhc.pl  mytitle.sty  psbox.tex  scangeometry.ai  scangeometry.eps  tex2rtf.ini  texhelp.sty
docs/: ctsim.htb
getopt/: Makefile  Makefile.am  Makefile.in  getopt.c  getopt.h  getopt1.c
helical/: Makefile  Makefile.am  Makefile.in  dynphm.c
html/: Makefile  Makefile.am  Makefile.in  simulate.html  simulate.html.in
images/: SplashScreen.psd  logo-full-size.psd
include/: Makefile  Makefile.am  Makefile.in  array2d.h  array2dfile.h  backprojectors.h  ct.h  ctglobals.h  ctndicom.h  ctsupport.h  ezplot.h  filter.h  fnetorderstream.h  fourier.h  hashtable.h  imagefile.h  interpolator.h  mpiworld.h  msvc_compat.h  nographics.h  phantom.h  plotfile.h  pol.h  procsignal.h  projections.h  reconstruct.h  scanner.h  sgp.h  sstream_subst  timer.h  trace.h  transformmatrix.h
libctgraphics/: Makefile  Makefile.am  Makefile.in  bresenham.cpp  ezplot.cpp  ezset.cpp  ezsupport.cpp  pol.cpp  sgp.cpp  transformmatrix.cpp
libctsim/: Makefile  Makefile.am  Makefile.in  array2dfile.cpp  backprojectors.cpp  ctndicom.cpp  filter.cpp  fourier.cpp  imagefile.cpp  phantom.cpp  procsignal.cpp  projections.cpp  reconstruct.cpp  scanner.cpp  trace.cpp
libctsupport/: Makefile  Makefile.am  Makefile.in  Makefile.nt  clip.cpp  consoleio.cpp  fnetorderstream.cpp  globalvars.cpp  hashtable.cpp  interpolator.cpp  mathfuncs.cpp  msvc.cpp  plotfile.cpp  strfuncs.cpp  syserror.cpp  xform.cpp
man/: Makefile  Makefile.am  Makefile.in  ctsim.1  ctsim.texi  ctsimtext.1  if1.1  if2.1  ifexport.1  ifinfo.1  linogram.1  phm2helix.1  phm2if.1  phm2pj.1  pj2if.1  pjHinterp.1  pjinfo.1  pjrec.1
msvc/: copy-binaries.bat  ctsim.dsw
msvc/ctsim/: ctsim.dsp  ctsim.plg  ctsim.rc  ctsim.vcproj
msvc/ctsimtext/: ctsimtext.dsp  ctsimtext.rc  ctsimtext.vcproj
msvc/libctsim/: libctsim.dsp  libctsim.vcproj
rpm/: ctsim.spec
src/: Makefile  Makefile.am  Makefile.in  backgroundmgr.cpp  backgroundmgr.h  backgroundsupr.cpp  backgroundsupr.h  ctsim-map.h  ctsim.cpp  ctsim.h  ctsim.xpm  dialogs.cpp  dialogs.h  dlgezplot.cpp  dlgezplot.h  dlgprojections.cpp  dlgprojections.h  dlgreconstruct.cpp  dlgreconstruct.h  docs.cpp  docs.h  graph3dview.cpp  graph3dview.h  splash.xpm  threadproj.cpp  threadproj.h  threadraster.cpp  threadraster.h  threadrecon.cpp  threadrecon.h  tips.cpp  tips.h  views.cpp  views.h
tools/: Makefile  Makefile.am  Makefile.in  ctsimtext.cpp  if1.cpp  if2.cpp  ifexport.cpp  ifinfo.cpp  linogram.cpp  mpiworld.cpp  nographics.cpp  phm2helix.cpp  phm2if.cpp  phm2pj.cpp  pj2if.cpp  pjHinterp.cpp  pjinfo.cpp  pjrec.cpp
